--- a/modules/eslint-react/wes-config.json
+++ b/modules/eslint-react/wes-config.json
@@ -1,4 +1,8 @@
 {
   "version": 1,
-  "dependencies": ["core", "eslint", "website-react"]
+  "dependencies": [
+    "core",
+    "eslint",
+    "website-react"
+  ]
 }
