modules/typescript-web: Add typescript-plugin-css-modules

--- a/modules/typescript-web/tsconfig.json
+++ b/modules/typescript-web/tsconfig.json
@@ -1,6 +1,13 @@
 {
   "compilerOptions": {
-    "lib": ["dom"],
-    "noEmit": true
+    "lib": [
+      "dom"
+    ],
+    "noEmit": true,
+    "plugins": [
+      {
+        "name": "typescript-plugin-css-modules"
+      }
+    ]
   }
 }
