typescript-node-lib: Renamed from typescript-node-package

--- a/wes-config.json
+++ b/wes-config.json
@@ -9,7 +9,7 @@
     "prettier",
     "typescript",
     "typescript-node",
-    "typescript-node-package",
+    "typescript-node-lib",
     "vscode"
   ]
 }
