jest-react: Improvements to module

--- a/modules/jest-react/wes-config.json
+++ b/modules/jest-react/wes-config.json
@@ -2,7 +2,10 @@
   "version": 1,
   "dependencies": [
     "core",
-    "react",
+    [
+      "react",
+      "react-lib"
+    ],
     "jest",
     "typescript"
   ]
