--- a/modules/jest-react/package.json
+++ b/modules/jest-react/package.json
@@ -3,6 +3,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/react-hooks": "^8.0.0",
-    "identity-obj-proxy": "^3.0.0"
+    "identity-obj-proxy": "^3.0.0",
+    "jest-environment-jsdom": "^28.1.1"
   }
 }
