typescript-react: Improvements to module

--- a/modules/typescript-react/tsconfig.json
+++ b/modules/typescript-react/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "compilerOptions": {
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "lib": [
+      "dom",
+    ],
   },
   "include": [
     "**/*.tsx"
