--- a/.wes-defaults/local/tsconfig.json
+++ b/.wes-defaults/local/tsconfig.json
@@ -1,13 +1,8 @@
 {
   "compilerOptions": {
     "baseUrl": "./",
-    "outDir": "./lib",
-    "paths": {
-      "~/*": [
-        "*"
-      ]
-    },
-    "rootDir": "./src",
+    "outDir": "lib",
+    "rootDir": "src",
   },
   "exclude": [
     "bin",
