--- a/modules/eslint-react/.eslintrc
+++ b/modules/eslint-react/.eslintrc
@@ -10,6 +10,7 @@
     "react-hooks/rules-of-hooks": "error",
     "react/jsx-no-target-blank": "off",
     "react/jsx-uses-react": "off",
+    "react/prop-types": "off",
     "react/react-in-jsx-scope": "off"
   },
   "settings": {
