--- a/modules/eslint-typescript/.eslintrc
+++ b/modules/eslint-typescript/.eslintrc
@@ -5,6 +5,8 @@
   ],
   "rules": {
     "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/no-empty-interface": "off",
     "@typescript-eslint/no-use-before-define": "off",
     "@typescript-eslint/no-unused-vars": [
       "error",
