typescript: Use ESNext module, Node16 moduleResolution and enable sourceMap

--- a/.wes-defaults/local/tsconfig.json
+++ b/.wes-defaults/local/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "baseUrl": "./",
+    "module": "CommonJS",
+    "moduleResolution": "Node",
     "outDir": "lib",
     "rootDir": "src",
   },
