--- a/modules/github-codeql/wes-config.json
+++ b/modules/github-codeql/wes-config.json
@@ -1,13 +1,6 @@
 {
   "version": 1,
   "dependencies": [
-    "core",
-    "eslint",
-    [
-      "jest",
-      "jest-react"
-    ],
-    "prettier",
-    "typescript"
+    "core"
   ]
 }
