--- a/wes-config.json
+++ b/wes-config.json
@@ -7,11 +7,11 @@
     "eslint-typescript",
     "github-codeql",
     "github-lint-typecheck-test-build",
-    "jest",
     "prettier",
+    "rollup-lib",
     "typescript",
     "typescript-node",
-    "typescript-node-lib",
+    "vitest",
     "vscode"
   ]
 }
