--- a/.wes-defaults/local/tsconfig.json
+++ b/.wes-defaults/local/tsconfig.json
@@ -1,15 +1,11 @@
 {
   "compilerOptions": {
-    "baseUrl": "./",
     "module": "CommonJS",
-    "moduleResolution": "Node",
-    "outDir": "lib",
-    "rootDir": "src",
+    "moduleResolution": "Node"
   },
   "exclude": [
     "bin",
     "modules",
-    "lib",
     "scripts",
   ],
 }
