jest, vitest: Add test:ci script

--- a/modules/jest/package.json
+++ b/modules/jest/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:ci": "jest --ci --coverage --maxWorkers=2"
   },
   "devDependencies": {
     "@types/jest": "^28.1.7",
