--- a/.github/workflows/lint-typecheck-test-build.yml
+++ b/.github/workflows/lint-typecheck-test-build.yml
@@ -37,7 +37,7 @@ jobs:
         run: yarn check:types
 
       - name: Test
-        run: yarn test --ci --coverage --maxWorkers=2
+        run: yarn test:ci
 
       - name: Build
         run: yarn build
