--- a/modules/vitest-react/wes-config.json
+++ b/modules/vitest-react/wes-config.json
@@ -2,7 +2,10 @@
   "version": 1,
   "dependencies": [
     "core",
-    "typescript",
-    "react"
+    [
+      "react",
+      "react-lib"
+    ],
+    "typescript"
   ]
 }
