--- a/modules/rollup-lib/package.json
+++ b/modules/rollup-lib/package.json
@@ -1,7 +1,12 @@
 {
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "type": "module",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    "import": "./dist/index.js",
+    "require": "./dist/index.cjs"
+  },
   "scripts": {
     "build": "rollup -c",
     "prepare": "yarn run build"
