--- a/.wes-defaults/local/package.json
+++ b/.wes-defaults/local/package.json
@@ -4,6 +4,7 @@
   "description": "CLI for all things Wes",
   "scripts": {
     "lint": "eslint --config .eslintrc --no-eslintrc .",
+    "manual-install": "ts-node ./scripts/manualInstall.ts",
     "upgrade-module-dependencies": "ts-node ./scripts/upgradeModuleDependencies.ts",
     "wes": "./bin/wes-cli.js"
   },
@@ -17,25 +18,25 @@
   "bin": {
     "wes": "bin/wes-cli.js"
   },
-  "type": "commonjs",
   "files": [
     "bin",
     "dist",
     "modules"
   ],
   "dependencies": {
-    "@oclif/core": "^1.14.1",
-    "@oclif/plugin-help": "^5.1.11",
+    "@oclif/core": "^1.20.3",
+    "@oclif/plugin-help": "^5.1.18",
     "@yarnpkg/lockfile": "^1.1.0",
     "deepmerge": "^4.2.2",
-    "directory-tree": "^3.3.0",
+    "directory-tree": "^3.3.1",
     "json5": "^2.2.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.183",
+    "@types/lodash": "^4.14.188",
     "@types/yarnpkg__lockfile": "^1.1.5",
-    "oclif": "^3.1.2"
+    "oclif": "^3.2.24"
   },
   "engines": {
     "node": ">=16.0.0"
