--- a/modules/typescript-web/package.json
+++ b/modules/typescript-web/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
-    "typescript-plugin-css-modules": "^3.4.0"
+    "postcss": "^8.4.21",
+    "typescript-plugin-css-modules": "^4.2.2"
   },
   "resolutions": {
     "typescript-plugin-css-modules/**/postcss": "^8.4.14"
